Noteworthy changes in version 1.21.0 (unreleased)
-------------------------------------------------

 * Error::isCanceled now also returns true for error code
   GPG_ERR_FULLY_CANCELED.  [T6510]


Noteworthy changes in version 1.20.0 (2023-04-20)
-------------------------------------------------

 * On Windows, the gettext functions provided by gpgrt are switched
   into utf8 mode, so that all localized texts returned by GpgME or
   gpgrt, e.g. the texts for error codes are now UTF-8 encoded.
   [T5960]

 * Key::canSign now returns false for OpenPGP keys without signing
   (sub)key.  [T6456]

 * The new macOS Homebrew location is now by default supported.
   [T6440]

 * Fix regression in 1.19.0.  [rMb608c084b9]

 * Fix invocation of gpgtar on Windows.  [rM0c29119e06]

 * Interface changes relative to the 1.19.0 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 gpgme_subkey_t              EXTENDED: New field 'can_renc'.
 gpgme_subkey_t              EXTENDED: New field 'can_timestamp'.
 gpgme_subkey_t              EXTENDED: New field 'is_group_owned'.
 cpp: Subkey::canRenc                       NEW.
 cpp: Subkey::canTimestamp                  NEW.
 cpp: Subkey::isGroupOwned                  NEW.
 cpp: Key::canReallySign                    DEPRECATED.

 [c=C40/A29/R0 cpp=C23/A17/R0 qt=C17/A2/R1]

 Release-info: https://dev.gnupg.org/T6463


Noteworthy changes in version 1.19.0 (2023-03-17)
-------------------------------------------------

 * New convenience option --identify for gpgme-json.

 * New context flag "no-auto-check-trustdb".  [T6261]

 * Optionally, build QGpgME for Qt 6

 * Support component "gpgtar-name" in gpgme_get_dirinfo.  [T6342]

 * Extended gpgme_op_encrypt*, gpgme_op_encrypt_sign*, and
   gpgme_op_sign* to allow creating an encrypted and/or signed
   archive.  [T6342]

 * Extended gpgme_op_decrypt*, gpgme_op_decrypt_verify*, and gpgme_op_verify*
   to allow extracting an encrypted and/or signed archive.  [T6342]
